Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
1.3.1
-
None
-
None
Description
when I use kudu java client,I need to make scanner to keepAlive in my usage case。But I can not find this method in java client; On the other hand,I found kudu::client::KuduScanner::KeepAlive in c++ client。This is very necessary in my usage,will you implement it in java client? thank you !
Attachments
Issue Links
- Dependent
-
KUDU-2563 Spark integration should use the scanner keep-alive API
- Resolved