KUDU-2095: [java] Add scanner keepAlive API to the Java client

This patch adds keepAlive methods to the
AsyncKuduScanner and KuduScanner. These methods
leverage a package private method added to the
AsyncKuduClient using a similar implementation
pattern to existing scan related RPCs. The behavior of
this implementation mimics the C++ client.

Change-Id: Ic802f556c8860cdd43ef5f794c8f3658259bd0be
Reviewed-on: http://gerrit.cloudera.org:8080/11436
Reviewed-by: Adar Dembo <adar@cloudera.com>
Tested-by: Grant Henke <granthenke@apache.org>